raffia/tests/error/scss/value/expression.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ expression.scss:1:7
  │
1 │ a {a: .}
  │       ^


